--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.4.2
 async-timeout==3.0.1
 attrs==20.3.0
 chardet==3.0.4
+colorama==0.4.4
 discord.py==1.5.1
 idna==2.10
 isort==5.6.4
@@ -12,7 +13,10 @@ multidict==4.7.6
 pylint==2.6.0
 pymongo==3.11.1
 python-dotenv==0.15.0
+pytz==2021.1
 six==1.15.0
 toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
 wrapt==1.12.1
 yarl==1.5.1
